--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ ITHACA-FV directory structure</h1>
 <li><b>docs:</b> documentation.</li>
 </ul>
 <h1><a class="anchor" id="step1"></a>
-How to cite IHACA-FV.</h1>
+How to cite ITHACA-FV.</h1>
 <p>Most of the theoretical aspects behind ITHACA-FV are deeply explained in <a href="https://arxiv.org/pdf/1701.03424.pdf"><b> Stabile2017CAIM </b></a> and <a href="https://arxiv.org/pdf/1710.11580.pdf"><b> Stabile2017CAF </b></a>. For this reason, if you use this software, please consider citing the mentioned works, reported in the following bibtex entries:</p>
 <pre class="fragment">@Article{Stabile2017CAIM,
 Title                    = {{POD-Galerkin reduced order methods for CFD using Finite Volume Discretisation: vortex shedding around a circular cylinder}},
