update docu for ITHACAstream class

--- a/classITHACAPOD.html
+++ b/classITHACAPOD.html
@@ -253,7 +253,7 @@ Static Public Member Functions</h2></td></tr>
 <p>Construct the Correlation Matrix for Vector Field.</p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">snapshots</td><td>The snapshots matrices</td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">snapshots</td><td>The snapshots matrices</td></tr>
   </table>
   </dd>
 </dl>
@@ -291,7 +291,7 @@ Static Public Member Functions</h2></td></tr>
 <p>Construct the Correlation Matrix for Vector Field.</p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">snapshots</td><td>The snapshots matrices</td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">snapshots</td><td>The snapshots matrices</td></tr>
   </table>
   </dd>
 </dl>
@@ -346,7 +346,7 @@ template&lt;typename T &gt; </div>
 <p>Get the DEIM modes for a generic non linear function. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramname">SnapShotsMatrix</td><td>The snapshots matrix</td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">SnapShotsMatrix</td><td>The snapshots matrix</td></tr>
   </table>
   </dd>
 </dl>
@@ -413,7 +413,7 @@ template&lt;typename type_matrix &gt; </div>
 <p>Get the DEIM modes for a generic non a parametrized matrix coming from a differential operator function. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramdir"></td><td class="paramname">MatrixList</td><td>The matrix list as a list of pointers </td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">MatrixList</td><td>The matrix list as a list of pointers </td></tr>
     <tr><td class="paramdir">[in]</td><td class="paramname">nmodes</td><td>The number of modes </td></tr>
     <tr><td class="paramdir">[in]</td><td class="paramname">MatrixName</td><td>The matrix name, used to save the matrix</td></tr>
   </table>
@@ -486,7 +486,7 @@ template&lt;typename type_matrix &gt; </div>
 <p>Get the DEIM modes for a generic non a parametrized matrix coming from a differential operator function. </p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
-    <tr><td class="paramdir"></td><td class="paramname">MatrixList</td><td>The matrix list as a list of pointers </td></tr>
+    <tr><td class="paramdir">[in]</td><td class="paramname">MatrixList</td><td>The matrix list as a list of pointers </td></tr>
     <tr><td class="paramdir">[in]</td><td class="paramname">nmodes</td><td>The number of modes </td></tr>
     <tr><td class="paramdir">[in]</td><td class="paramname">MatrixName</td><td>The matrix name, used to save the matrix</td></tr>
   </table>
