--- a/ITHACAutilities_8H.html
+++ b/ITHACAutilities_8H.html
@@ -84,6 +84,7 @@ $(function() {
 <a href="#details">More...</a></p>
 <div class="textblock"><code>#include &quot;fvCFD.H&quot;</code><br />
 <code>#include &quot;IOmanip.H&quot;</code><br />
+<code>#include &quot;freestreamFvPatchField.H&quot;</code><br />
 <code>#include &lt;sys/stat.h&gt;</code><br />
 <code>#include &quot;../thirdparty/Eigen/Eigen/Eigen&quot;</code><br />
 <code>#include &quot;../thirdparty/Eigen/Eigen/LU&quot;</code><br />
