--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ ITHACA-FV directory structure</h1>
 </ul>
 <h1><a class="anchor" id="step1"></a>
 How to cite IHACA-FV.</h1>
-<p>Most of the theoretical aspects behind ITHACA-FV are deeply explained in <a href="https://arxiv.org/pdf/1701.03424.pdf"><b> Stabile2017CAIM </b></a> and <a href="https://arxiv.org/pdf/1710.11580.pdf"><b> Stabile2017CAF </b></a>. For this reason, if you use this software, please consider citing the mentioned works, reported in the following bibtex entries:</p>
+<p>Most of the theoretical aspects behind ITHACA-FV are deeply explained in <a href="https://doi.org/10.1515/caim-2017-0011"><b> Stabile2017CAIM </b></a> and <a href="https://doi.org/10.1016/j.compfluid.2018.01.035"><b> Stabile2017CAF </b></a>. For this reason, if you use this software, please consider citing the mentioned works, reported in the following bibtex entries:</p>
 <p>{Stabile2017CAIM, Title = {{POD-Galerkin reduced order methods for CFD using Finite Volume Discretisation: vortex shedding around a circular cylinder}}, Author = {Stabile, Giovanni and Hijazi, Saddam and Mola, Andrea and Lorenzi, Stefano and Rozza, Gianluigi}, Journal = {Communications in Applied and Industrial Mathematics}, Year = {(2017)}, Volume = {8}, Number = {1}, pages = {210-236}, Doi = {10.1515/caim-2017-0011}}</p>
 <p>{Stabile2017CAF, Title = {{Finite volume POD-Galerkin stabilised reduced order methods for the parametrised incompressible Navier-Stokes equations}}, Author = {Stabile, Giovanni and Rozza, Gianluigi}, Journal = {Computers &amp; Fluids}, Year = {2018}, Doi = {10.1016/j.compfluid.2018.01.035}}</p>
 <p>And cite the ITHACA-FV <a href="https://mathlab.sissa.it/ithaca-fv">website</a>. </p>
